--- a/src/pages/welcome/style.css
+++ b/src/pages/welcome/style.css
@@ -42,3 +42,9 @@
   grid-template-columns: 1fr 1fr;
   gap: 24px;
 }
+.error {
+  color: red;
+  font-size: 0.875em;
+  margin-top: 0.25em;
+  display: block;
+}
