--- a/src/styles/_form.css
+++ b/src/styles/_form.css
@@ -1,4 +1,4 @@
-form input {
+form input, .profileLabelValue {
   background: var(--color-blue5);
   border: 1px solid transparent;
   border-radius: 8px;
@@ -7,10 +7,75 @@ form input {
   line-height: 1.33;
   width: 100%;
 }
+
+.textField{
+  height: 336px;
+}
+
+.outerProfileInfo {
+  margin: 20px;
+  margin-bottom: 0px; 
+  margin-top: 0px; 
+  padding: 10px; 
+}
+
+.ProfilePageTitle {
+  margin: 20px;
+  margin-top: 5px; 
+  margin-bottom: 5px; 
+  padding-bottom: 10px; 
+  padding-top: 0px; 
+}
+
+.profileInfo {
+  background-color: white;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid var(--color-blue7);
+}
+.hrstyle{
+  border: 0.5px solid var(--color-blue7);
+  margin-bottom: 20px; 
+}
+.profileInfoBlockContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.profileInfoContentsEntry{
+  margin-bottom: 54px;
+}
+
+
+.profileInfoContents p, .profileInfoContents h3 {
+  margin-bottom: 20px;
+  display: flex;
+  min-height: 60px;
+}
+.profileInfoContents{
+  max-width: 564px;
+  min-width: 244px;
+  width: -webkit-fill-available;
+  margin-bottom: 30px;
+  padding: 10px;
+  max-width: 50%;
+}
+.ProfileCircleWithInfo {
+  display: flex;
+  padding: 10px;
+}
+.ProfileCircleWithInfo span p {
+  color: var(--color-blue1);
+}
+
+.ProfileCircleWithInfo span {
+  margin: 10px;
+}
+
 form input:focus {
   border: 1px solid var(--color-blue2);
 }
-form label {
+form label, .profileLabel {
   color: var(--color-blue1);
   line-height: 1.5;
   margin-bottom: 2px;
