--- a/src/pages/dashboard/style.css
+++ b/src/pages/dashboard/style.css
@@ -19,3 +19,20 @@ aside {
   max-width: 100% !important;
   background-color: var(--color-blue5);
 }
+
+.post-details {
+  display: grid;
+  grid-template-columns: 56px auto 48px;
+  column-gap: 20px;
+}
+
+.post-user-name {
+  padding-top: 4px;
+}
+
+.edit-icon {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  background: #f0f5fa;
+}
